--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".ApiKeyActivity">
         </activity>
         <activity android:name=".HistoryActivity"></activity>
+        <activity android:name=".PreferencesActivity"></activity>
         <service android:name=".EveApiUpdaterService"></service>
         <receiver android:name="com.commonsware.cwac.wakeful.AlarmReceiver">
             <intent-filter>
