--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.matdue.isk"
     android:versionCode="1"
-    android:versionName="1.0" android:installLocation="auto">
+    android:versionName="1.0"
+    android:installLocation="auto">
 
     <uses-sdk android:minSdkVersion="10" />
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -17,13 +18,15 @@
         <activity
             android:label="@string/app_name"
             android:name=".StartActivity" >
-            <intent-filter >
+            <intent-filter android:label="@string/launcher_app_name">
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PilotsActivity"></activity>
+        <activity 
+            android:name=".PilotsActivity"
+            android:label="@string/pilots_title">
+        </activity>
         <activity android:name=".ApiCallbackActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
@@ -32,11 +35,21 @@
                 <data android:scheme="eve" android:host="api.eveonline.com" android:path="/installKey"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ApiKeyActivity">
+        <activity 
+            android:name=".ApiKeyActivity">
         </activity>
-        <activity android:name=".HistoryActivity"></activity>
-        <activity android:name=".WalletActivity"></activity>
-        <activity android:name=".PreferencesActivity"></activity>
+        <activity 
+            android:name=".HistoryActivity" 
+            android:label="@string/history_title">
+        </activity>
+        <activity 
+            android:name=".WalletActivity" 
+            android:label="@string/wallet_title">
+        </activity>
+        <activity 
+            android:name=".PreferencesActivity" 
+            android:label="@string/preferences_title">
+        </activity>
         <service android:name=".EveApiUpdaterService"></service>
         <receiver android:name="com.commonsware.cwac.wakeful.AlarmReceiver">
             <intent-filter>
