--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,7 @@
 
     <application
         android:icon="@drawable/ic_launcher"
+        android:description="@string/app_description"
         android:label="@string/app_name" >
         <activity
             android:label="@string/app_name"
@@ -49,6 +50,10 @@
         <activity 
             android:name=".PreferencesActivity" 
             android:label="@string/preferences_title">
+        </activity>
+        <activity 
+            android:name=".AboutActivity" 
+            android:label="@string/about_title">
         </activity>
         <service android:name=".EveApiUpdaterService"></service>
         <receiver android:name="com.commonsware.cwac.wakeful.AlarmReceiver">
