--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:label="@string/app_name" >
         <activity
             android:label="@string/app_name"
-            android:name=".StartActivity" >
+            android:name=".StartActivity" 
+            android:theme="@style/Theme.Background">
             <intent-filter android:label="@string/launcher_app_name">
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -53,7 +54,8 @@
         </activity>
         <activity 
             android:name=".AboutActivity" 
-            android:label="@string/about_title">
+            android:label="@string/about_title"
+            android:theme="@style/Theme.Background">
         </activity>
         <service android:name=".EveApiUpdaterService"></service>
         <receiver android:name="com.commonsware.cwac.wakeful.AlarmReceiver">
